--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AbidinAI - Gambar Generator</title>
+  <title>AI Image Generator</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f2f2f2;
-      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
       padding: 20px;
       text-align: center;
     }
@@ -17,88 +16,94 @@
       color: #333;
     }
 
-    input, textarea, button {
-      padding: 10px;
-      margin: 10px;
-      font-size: 16px;
-      width: 90%;
-      max-width: 500px;
+    textarea {
+      width: 80%;
+      height: 100px;
+      margin-bottom: 10px;
     }
 
     button {
-      background-color: #4CAF50;
-      color: white;
-      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 10px;
       cursor: pointer;
     }
 
-    button:hover {
-      background-color: #45a049;
-    }
-
-    #result img {
-      max-width: 100%;
+    #result {
       margin-top: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
-    .loader {
-      display: none;
-      font-size: 18px;
-      color: #555;
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <h1>🎨 AbidinAI - Generator Gambar AI</h1>
+  <h1>AI Gambar Generator (Tanpa Backend)</h1>
+  <textarea id="prompt" placeholder="Masukkan prompt seperti 'anime girl in city at night'..."></textarea><br>
+  <button onclick="generateImage()">Buat Gambar</button>
 
-  <textarea id="prompt" placeholder="Tulis deskripsi gambar... Contoh: a fantasy landscape with dragons" rows="4"></textarea><br>
-  <button onclick="generateImage()">Generate Gambar</button>
-  <div class="loader" id="loader">⏳ Sedang membuat gambar...</div>
   <div id="result"></div>
 
   <script>
-    const apikey = "41624a1f-d629-46ba-bf83-c01a9b754334"; // Ganti dengan API-key kamu
-
-    async function generateImage() {
+    function generateImage() {
       const prompt = document.getElementById("prompt").value;
-      const loader = document.getElementById("loader");
-      const result = document.getElementById("result");
-      result.innerHTML = "";
-      loader.style.display = "block";
+      const resultDiv = document.getElementById("result");
+      resultDiv.innerHTML = "Tunggu sebentar, sedang menghasilkan gambar...";
 
-      const response = await fetch("https://modelslab.com/api/v6/images/text2img", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          key: apikey,
-          model_id: "realistic-vision",  // kamu bisa ubah ke "anything-v5", "anime-realistic", dll
-          prompt: prompt,
-          negative_prompt: "blurry, low quality, distorted, ugly, deformed",
-          width: "512",
-          height: "512",
-          samples: "1",
-          num_inference_steps: "30",
-          guidance_scale: 7.5
-        })
+      const headers = new Headers();
+      headers.append("Content-Type", "application/json");
+
+      const body = JSON.stringify({
+        key: "41624a1f-d629-46ba-bf83-c01a9b754334",
+        model_id: "midjourney",
+        prompt: prompt,
+        negative_prompt: "blurry, bad anatomy, distorted, extra limbs",
+        width: "512",
+        height: "512",
+        samples: "1",
+        num_inference_steps: "30",
+        safety_checker: "no",
+        enhance_prompt: "yes",
+        seed: null,
+        guidance_scale: 7.5,
+        multi_lingual: "no",
+        panorama: "no",
+        self_attention: "no",
+        upscale: "no",
+        lora_model: null,
+        tomesd: "yes",
+        use_karras_sigmas: "yes",
+        vae: null,
+        lora_strength: null,
+        scheduler: "UniPCMultistepScheduler",
+        webhook: null,
+        track_id: null
       });
 
-      loader.style.display = "none";
+      const requestOptions = {
+        method: "POST",
+        headers: headers,
+        body: body,
+        redirect: "follow"
+      };
 
-      if (!response.ok) {
-        result.innerHTML = `<p style="color:red;">❌ Gagal menghubungi API. Cek API key atau jaringan!</p>`;
-        return;
-      }
-
-      const data = await response.json();
-      if (data && data.output && data.output[0]) {
-        result.innerHTML = `<img src="${data.output[0]}" alt="Hasil Gambar AI">`;
-      } else {
-        result.innerHTML = `<p style="color:red;">❌ Tidak ada gambar yang dihasilkan!</p>`;
-      }
+      fetch("https://modelslab.com/api/v6/images/text2img", requestOptions)
+        .then(response => response.json())
+        .then(result => {
+          if (result && result.output && result.output.length > 0) {
+            const imageUrl = result.output[0];
+            resultDiv.innerHTML = `<img src="${imageUrl}" alt="Generated Image">`;
+          } else {
+            resultDiv.innerHTML = "Gagal menghasilkan gambar.";
+          }
+        })
+        .catch(error => {
+          console.error("Error:", error);
+          resultDiv.innerHTML = "Terjadi kesalahan. Coba lagi.";
+        });
     }
   </script>
 </body>
